--- a/.github/workflows/timebox-deploy.yml
+++ b/.github/workflows/timebox-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Timeboxed
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "development" ]
 
 jobs:
   get-timebox:
@@ -15,12 +15,16 @@ jobs:
 
       - name: Should Run
         env: 
-          HOUR: 13 # This is in UTC
+          HOUR: "${{ steps.current-time.outputs.hour }}" # This is in UTC
           LOWER_BOUND: 14 # 10 am EST
           UPPER_BOUND: 21 # 5 pm EST
         run: |
-          echo $HOUR
           if (( $HOUR >= $LOWER_BOUND && $HOUR < $UPPER_BOUND )); then echo "SHOULD_RUN=y" >> $GITHUB_ENV; else echo "SHOULD_RUN=n" >> $GITHUB_ENV; fi 
              
       - name: Test Should Run
-        run: echo $SHOULD_RUN
+        env:
+          JENKINS_USER: gabriel
+          JENKINS_API_TOKEN: ${{ secrets.JENKINS_API_TOKEN }}
+          JENKINS_URL: "https://jenkins.elitegamer.gg/job/elitegamer_new_ui_build_job/buildWithParameters"
+        if: ${{ env.SHOULD_RUN == 'y' }}
+        run: curl -X POST $JENKINS_URL --user $JENKINS_USER:$JENKINS_API_TOKEN --data BRANCH=development --data ENVIRONMENT=groopview
